# FRIDAY-AI-ASSISSTANT

./: .gitignore  .spotify_cache  agent_friday.py  cli_friday.py  friday_gui.py  friday_notes.json  friday_ui.py  memory.json  pyproject.toml  test_gemini.py
friday/: app_config.py  config.py  memory.py  state.py  voice.py
friday/AI/: chat.py  intent.py
friday/Automation/: apps.py  browser.py  system.py  volume.py
friday/Commands/: _reminder_process.py  _stopwatch_ui.py  files.py  git_commands.py  notes.py  screen.py  screenshot.py  shortcuts.py  spotify.py  timer.py  todo.py  weather.py  whatsapp.py
friday/Personality/: prompts.py  self_knowledge.py
