[project]
name = "friday-tony-stark-demo"
version = "0.1.0"
description = "Friday — A Tony Stark-inspired MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "elevenlabs>=2.49.0",
    "fastmcp",
    "google-genai>=1.70.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "gtts>=2.5.4",
    "httpx",
    "livekit-agents[deepgram,groq,openai,sarvam,silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "numpy>=2.4.4",
    "piper-tts>=1.4.2",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "python-dotenv",
    "pyttsx3>=2.99",
    "pywhatkit>=5.4",
    "selenium>=4.44.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "speechrecognition>=3.16.1",
    "spotipy>=2.26.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.1.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
friday = "server:main"
friday_voice = "agent_friday:dev" # Points to the wrapper

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
